--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,15 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "./index.js",
-        "use": "@vercel/node"
-      }
+        {
+            "src": "index.js",
+            "use": "@now/node"
+        }
     ],
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/"
-      }
-    ],
-    "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
-  }
+        {
+            "src": "/(.*)",
+            "dest": "index.js"
+        }
+    ]
+}
