--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec ./node_modules/.bin/babel-node ./bin/www.js -e js",
-    "build": "mkdir public && babel src -s -d public"
+    "build": "mkdir public && babel src -s -d public",
+    "generate-html": "mkdir -p dist && cp index.html dist/"
   },
   "dependencies": {
     "axios": "^1.6.7",
