--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec ./node_modules/.bin/babel-node ./bin/www.js -e js",
-    "build": "npm run generate-html && vite build",
+    "build": "nodemon generate-html && vite build",
     "generate-html": "mkdir -p dist && cp index.html dist/"
   },
   "dependencies": {
