--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec ./node_modules/.bin/babel-node ./bin/www.js -e js",
-    "build": "nodemon generate-html && vite build",
-    "generate-html": "mkdir -p dist && cp index.html dist/"
+    "build": "mkdir public && babel src -s -d public"
   },
   "dependencies": {
     "axios": "^1.6.7",
