--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec ./node_modules/.bin/babel-node ./bin/www.js -e js",
+    "start": "nodemon --exec ./node_modules/.bin/babel-node ./bin/www -e js",
     "build": "mkdir public && babel src -s -d public"
   },
   "dependencies": {
