--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec ./node_modules/.bin/babel-node ./bin/www -e js",
-    "build": "mkdir public && babel src -s -d public"
+    "build": "nodemon --exec ./node_modules/.bin/babel-node ./bin/www -e js"
   },
   "dependencies": {
     "axios": "^1.6.7",
